2007-05-23 Patrick Mansfield <patmans@us.ibm.com>

	* spu/syscalls.c: Change __send_to_ppe to return the result stored
	in stored in slot 0 of the data, rather than have each assisted
	call retrieve the value.
	* spu/jsre.h: Remove the now unused syscall_out_t.
	* spu/access.c: Use the __send_to_ppe result instead of the slot 0
	value, remove unused syscall_out_t variable.
	* spu/close.c: Ditto.
	* spu/dup.c: Ditto.
	* spu/fstat.c: Ditto.
	* spu/ftruncate.c: Ditto.
	* spu/gettimeofday.c: Ditto.
	* spu/lseek.c: Ditto.
	* spu/open.c: Ditto.
	* spu/read.c: Ditto.
	* spu/stat.c: Ditto.
	* spu/unlink.c: Ditto.
	* spu/write.c: Ditto.

2007-05-23  Kazu Hirata  <kazu@codesourcery.com>

	* m68k/fido.sc (.data): Move .jcr to .text.  Catch .got.plt
	and .got.

2007-05-07  Patrick Mansfield  <patmans@us.ibm.com>

	* spu/open.c: Unconditionally set the "mode" to fix a bug where
	mode was not properly set.

2007-05-03  Kazu Hirata  <kazu@codesourcery.com>

	* m68k/fido-_exit.c (_exit): Use stop #0x700.

2007-04-27  Kazu Hirata  <kazu@codesourcery.com>

	* m68k/fido.sc: Catch .text.*, .rodata.*, .data.*, .bss.*,
	.ctor.*, and .dtor.*.  Wrap ctor/dtor-related sections with KEEP.

2007-04-04  Patrick Mansfield  <patmans@us.ibm.com>
 
	* spu/syscalls.c: Rename _send_to_ppe __send_to_ppe, and set errno
	on return from the offload call.
	* spu/jsre.h: Include sys/syscall.h for the send_to_ppe prototype.
	* spu/access.c: Call __send_to_ppe instead of _send_to_ppe, and
	remove the setting of errno.
	* spu/close.c: Ditto.
	* spu/dup.c: Ditto.
	* spu/fstat.c: Ditto.
	* spu/ftruncate.c: Ditto.
	* spu/gettimeofday.c: Ditto.
	* spu/lseek.c: Ditto.
	* spu/open.c: Ditto.
	* spu/read.c: Ditto.
	* spu/stat.c: Ditto.
	* spu/unlink.c: Ditto.
	* spu/write.c: Ditto.

2007-03-01  Ben Elliston  <bje@au.ibm.com>

	* spu/sbrk.c (sbrk): Adjust the stack pointer vector correctly so
	that GCC runtime stack checking works.  Handle the backchain, too.

2007-02-21  Patrick Mansfield  <patmans@us.ibm.com>
